--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,24 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/logo.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/images/logo-q.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.jpg" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
+    />
+    <meta
+      name="google-site-verification"
+      content="YOOESZ-rRKvHTDZW1YkwV3Ko46W3blX0cqigb4IdY24"
     />
     <title>Clarky | كلاركي</title>
   </head>
