--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/images/logo-q.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" /> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo-q.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
