--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/logo-q.png" />
+    <link rel="icon" href="%PUBLIC_URL%/images/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo-q.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
