testing netlify edge function for ad link preview

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,9 @@
       name="google-site-verification"
       content="YOOESZ-rRKvHTDZW1YkwV3Ko46W3blX0cqigb4IdY24"
     />
+    <meta name="og:title" content="__META_TITLE__" />
+    <meta name="og:description" content="__META_DESCRIPTION__" />
+    <meta name="og:image" content="__META_IMAGE__" />
     <title>Clarky | كلاركي</title>
   </head>
   <body>
