feat: Add Google Analytics tracking code to the website

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,20 @@
     <meta name="og:description" content="__META_DESCRIPTION__" />
     <meta name="og:image" content="__META_IMAGE__" />
     <title>Clarky | كلاركي</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-TPEE7KSZB7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-TPEE7KSZB7");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
