added sitemap file and google site verification

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,10 @@
     <meta name="og:description" content="__META_DESCRIPTION__" />
     <meta name="og:image" content="__META_IMAGE__" />
     <title>Clarky | كلاركي</title>
+    <meta
+      name="google-site-verification"
+      content="d638WpF8loRfDJclUZwNyrZhz_Skl7H2r7JF1xbnArE"
+    />
     <!-- Google tag (gtag.js) -->
     <script
       async
