fix: Set default meta tags for non-ad pages and replace meta tags for ad pages

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/512.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,9 +16,12 @@
       name="google-site-verification"
       content="YOOESZ-rRKvHTDZW1YkwV3Ko46W3blX0cqigb4IdY24"
     />
-    <meta name="og:title" content="__META_TITLE__" />
-    <meta name="og:description" content="__META_DESCRIPTION__" />
-    <meta name="og:image" content="__META_IMAGE__" />
+    <meta name="og:title" content="Clarky | كلاركي" />
+    <meta
+      name="og:description"
+      content="كلاركي - أول موقع متخصص في مجال الكلاركات في مصر"
+    />
+    <meta name="og:image" content="%PUBLIC_URL%/logo512.png" />
     <title>Clarky | كلاركي</title>
     <meta
       name="google-site-verification"
