testing ad preview photo display

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
       name="og:description"
       content="كلاركي - أول موقع متخصص في مجال الكلاركات في مصر"
     />
-    <meta name="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta name="og:image" content="/logo512.png" />
     <title>Clarky | كلاركي</title>
     <meta
       name="google-site-verification"
