added drivers section

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,9 +24,15 @@
     <meta name="og:image" content="/logo512.png" />
     <title>Clarky | كلاركي</title>
     <meta
+      name="description"
+      content="كلاركي - أول موقع متخصص في مجال الكلاركات في مصر"
+    />
+
+    <meta
       name="google-site-verification"
       content="d638WpF8loRfDJclUZwNyrZhz_Skl7H2r7JF1xbnArE"
     />
+
     <!-- Google tag (gtag.js) -->
     <script
       async
